--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "jsqr": "^1.4.0",
     "quagga": "^0.12.1",
     "react": "^18.2.0",
+    "react-barcode-qrcode-scanner": "^0.1.1",
     "react-dom": "^18.2.0",
     "react-qr-reader": "^3.0.0-beta-1",
     "react-qr-scanner": "^1.0.0-alpha.11",
