--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "firebase": "^10.5.2",
     "html5-qrcode": "^2.3.8",
     "jsqr": "^1.4.0",
     "quagga": "^0.12.1",
